# datalake

./: docker-compose.yml  readme.md
dagster/: Dockerfile  pyproject.toml  workspace.yaml
dagster/dagster_home/.telemetry/: id.yaml
dagster/dagster_home/history/: runs.db
dagster/dagster_home/history/runs/: .db  065fff90-1b4b-43ba-9baf-1d7c99a1d678.db  0bf1dc79-7042-47ad-84de-e57e46f01a96.db  0d05c700-a38b-45d8-8dd5-732ed800823b.db  0d81ae64-c455-4707-8c17-6ebf53b8eac5.db  0e3d7380-c2a0-43a9-a56e-deaa4b6f7be7.db  119c8508-d22e-4ddf-b72e-0067f2d719d6.db  17e421fe-3b5e-495b-9d8a-9d902c31295d.db  18dc391b-67e1-4e16-85af-5817d007cc68.db  1bd39fe9-de62-475c-ada9-c80c53c29c1b.db  1ce33726-6f5a-4223-b149-edb429574ff3.db  1d2109c8-6361-49f6-8f79-244d1612f588.db  27b9e920-68f5-4285-9061-3db0ee78982e.db  3735e572-9f20-43dc-95b6-d448c5373cab.db  379e1e95-9c21-49dd-a79b-eb8a6140194e.db  400f6770-5c9e-4754-93a6-e947efc5ac27.db  4618892a-d0e4-4845-9d5b-95a8172a440c.db  4673a5a4-7853-4ff9-8f6d-0091811d607b.db  497acfae-98af-43cd-88e2-db84916b12ed.db  546fef5e-a590-4a49-974a-756d39b829b2.db  562569a7-79d9-4a69-914b-fda8aa337d33.db  5cf5a3dc-b01b-4c1b-b9dd-e9aa4ff1a267.db  5dcea7f7-2fa4-4533-9ad7-d99a9e577d5b.db  6cec22cb-6bb2-4c84-8066-eb018b177073.db  6ead82a4-b7aa-417e-8a8c-b63d75a4f2c5.db  (+46 more)
dagster/dagster_home/schedules/: schedules.db
dagster/dagster_home/storage/: bronze_crypto_candles  raw_crypto_files
dagster/project/: bronze.py  definitions.py  iceberg_utils.py  ingestion_table.py  resources.py  silver.py
dagster/project/utils/: ingestion.py
notebooks/: Untitled.ipynb  (+4 more)
(+131 files in other folders)
