[project]
name = "datalake-dagster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "boto3>=1.42.49",
    "dagster",
    "dagster-graphql",
    "dagster-webserver",
    "polars",
    "pandas",
    "pyspark",
    "pyarrow",
    "pyiceberg>=0.11.0",
    "pyiceberg[pyiceberg-core]",
    "dagster-aws",
]
